feat(threads): Adopt Java Virtual Threads for management endpoints and Spring components
Resolves #432.
- Configured spring.threads.virtual.enabled=true in application.properties.
- Migrated ManagementServer to Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("management-http-", 0).factory()).

Assisted-by: Antigravity:gemini-3.6-flash
Signed-off-by: Ronny Trommer <ronny@no42.org>